# ml-intern-assessment

./: pyproject.toml  setup.py
ml-assignment/: README.md  requirements.txt  setup.py
ml-assignment/data/: alice_clean_v2.txt  download_and_clean_alice.py
ml-assignment/src/: __init__.py  cli.py  generate.py  ngram_model.py
ml-assignment/tests/: test_ngram.py
trigram_lm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
