[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "trigram-lm"
version = "0.1.0"
description = "A trigram language model for text generation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "numpy>=1.21.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "tqdm>=4.64.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
trigram-cli = "ml_assignment.cli:main"
